# AI-Things-Study

./: .gitignore  README.md  pyproject.toml  ruff.toml
Etc/: Ruff Linter.ipynb
Langchain/LangGraph/: 01-한국 출산율 검색하고 그래프 시각화.ipynb  02-CustomerAgentGraph.ipynb  03-Prompt Generation.ipynb  04-Mac Reminder App Control.ipynb  CustomerAgentGraph.ipynb
Langchain/Retrievers/: RetrievalQA.ipynb  ensemble_retriever_example.ipynb  multiVectorRetriever.ipynb  mutiquery_retriever_example.ipynb  parent-document_retriever_example.ipynb
Langchain/StructuredOutput/: Langchain 구조화된 출력.ipynb
Langchain/Test/: Langserve API Call Test.ipynb  SerpAPI Test2.ipynb  Tavily Search.ipynb  Web Rag.ipynb
Neo4j/: 1. 크롤링한 직업데이터 전처리하기.ipynb  2. 크롤링한 직업데이터 전처리하기2.ipynb  3. Neo4j로 데이터 로드하기.ipynb
Prompt/: Prompt Chain for Reverse Engineering App Development.md
llama-index/Agents/: E-9 Visa Document Agent.ipynb  Multi-Document Agents(V1).ipynb  평가:E-9 Visa.md  평가:Llama-index Document.md
llama-index/BaseRetriever/: 성능비교(Metadata).ipynb
llama-index/Basic Tutorial/: Llama-Index Rag 기본.ipynb  Query Test with Mixed Visa Guide Doc + FAQ Doc.ipynb
llama-index/ChatEngine/: Condense Plus Context Mode.ipynb
llama-index/Evaluation/: RagDatasetGenerator.ipynb  eval 테스트.ipynb
llama-index/Extraction/: Entity Extractor.ipynb  Metadata Extraction.ipynb
llama-index/KnowledgeGraph/: Constructing knowledge graphs.ipynb  Extract Terms.ipynb  GraphCypherQAChain.ipynb  Neo4j.ipynb  RAG_with_graph_db.ipynb  generic_cypher_gpt4.ipynb  llama Neo4j.ipynb  nebula3.ipynb  seeding csv to neo4j.ipynb  판교맛집.ipynb  (+1 more)
(+28 files in other folders)
